[metadata]
name = seq2ml
url = https://github.com/jhajagos/LSTMSeq2ML
author = Seq2ML Developers
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
# license = MIT License
description = Neural network models for clinical sequences
long_description = file:README.md
platforms = OS Independent

[options]
python_requires = >=3.6
install_requires =
    click
    h5py
    scikit-learn
packages = find:

[options.extras_require]
dev =
    black
    flake8
test =
    pytest
all =
    %(dev)s
    %(test)s

[options.entry_points]
console_scripts =
    seq2ml=seq2ml.cli:cli

[flake8]
max-line-length = 100
exclude =
    *test*
    */__init__.py
